--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 
 fail_fast: false
 default_language_version:
-  python: python3
+  python: python3.6
 exclude: |
   (?x)(
       \.(html|js|css)$
@@ -14,6 +14,7 @@ repos:
     hooks:
       - id: python-safety-dependencies-check
         files: pyproject.toml
+        additional_dependencies: ['poetry']
   - repo: 'https://github.com/PyCQA/bandit'
     rev: 1.7.1
     hooks:
