add meta data to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,30 @@ name = "pyvultr"
 version = "0.1.0"
 description = "Python library for Vultr API"
 authors = ["fishermanadg <fishermanadg@gmail.com>"]
-license = "LGPL"
+license = "MIT"
+readme = 'README.md'
+keywords = ["vultri", "api", "cloud", "vultr-api"]
+repository = "https://github.com/luxiaba/pyvultr.git"
+homepage = "https://github.com/luxiaba/pyvultr"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: MacOS",
+    "Operating System :: POSIX",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities"
+]
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
