--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,9 @@ name: Test
 
 on:
   push:
+    branches: ['main']
   pull_request:
+    branches: ['main']
     types: [opened, synchronize, assigned, reopened]
 
 jobs:
