--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,4 +46,10 @@ jobs:
       - name: Pytest
         run: |
           . venv/bin/activate
-          pytest -v -cov --cov=.
+          pytest --cov --cov-report=term --cov-report=xml
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v2
+        with:
+          name: codecov-umbrella
+          verbose: true
+          flags: unittests
