--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ skips = ["B101"]
 ignore = "D100, D101, D104, D107, D203, D213, D406, D407, D413"
 # D100: docstring in public module.
 # D101: docstring in public class.
-# D104: docstring in public packag.
+# D104: docstring in public package.
 # D107: docstring in `__init__`.
 # D203: 1 blank line required before class docstring.
 # D212: Multi-line docstring summary should start at the first line.
